--- a/src/assets/scss/_home.scss
+++ b/src/assets/scss/_home.scss
@@ -231,7 +231,7 @@
 /*------ CONSTRUCTION-HOME ------*/
 
 .construction-home {
-    background: url(../images/background/bg-4.jpg);
+    background: url(../images/background/bg-41.png);
     background-size: cover;
     background-position: center center;
     height: 100vh;
