--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -756,7 +756,7 @@ button:focus {
 
 /*------ CONSTRUCTION-HOME ------*/
 .construction-home {
-  background: url(../images/background/bg-4.jpg);
+  background: url(../images/background/bg-41.png);
   background-size: cover;
   background-position: center center;
   height: 100vh;
